Updated CMakeLists to make it more readable in tests folder

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -1,6 +1,14 @@
 if(ENABLE_TESTING)  
     find_package(Boost 1.39.0 REQUIRED COMPONENTS unit_test_framework)
-    foreach(PROG test_glink test_atom test_fragment test_segment test_segmenttype test_molecule test_polarsite test_apolarsite)
+    list(APPEND test_cases test_apolarsite)
+    list(APPEND test_cases test_atom)
+    list(APPEND test_cases test_fragment)
+    list(APPEND test_cases test_glink)
+    list(APPEND test_cases test_molecule)
+    list(APPEND test_cases test_polarsite)
+    list(APPEND test_cases test_segment)
+    list(APPEND test_cases test_segmenttype)
+    foreach(PROG ${test_cases} )
       add_executable(unit_${PROG} ${PROG}.cc)
       target_link_libraries(unit_${PROG} votca_xtp ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
       target_compile_definitions(unit_${PROG} PRIVATE BOOST_TEST_DYN_LINK)
