--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -6,6 +6,7 @@ if(ENABLE_TESTING)
     list(APPEND test_cases test_glink)
     list(APPEND test_cases test_molecule)
     list(APPEND test_cases test_polarsite)
+    list(APPEND test_cases test_qmpair)
     list(APPEND test_cases test_segment)
     list(APPEND test_cases test_segmenttype)
     foreach(PROG ${test_cases} )
