--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -10,6 +10,7 @@ if(ENABLE_TESTING)
     list(APPEND test_cases test_qmpair)
     list(APPEND test_cases test_segment)
     list(APPEND test_cases test_segmenttype)
+    list(APPEND test_cases test_topology)
     foreach(PROG ${test_cases} )
       add_executable(unit_${PROG} ${PROG}.cc)
       target_link_libraries(unit_${PROG} votca_xtp ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
