small output changes, added threecenter_test

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 find_package(Boost 1.39.0 REQUIRED COMPONENTS unit_test_framework)
-foreach(PROG test_glink test_aomatrix test_orbitals test_convergenceacc test_adiis test_diis test_atom test_eigen test_numericalintegration test_symmetric_matrix test_aobasis)
+foreach(PROG test_glink test_aomatrix test_orbitals test_convergenceacc test_adiis test_diis test_atom test_eigen test_numericalintegration test_symmetric_matrix test_aobasis test_threecenter)
 	file(GLOB ${PROG}_SOURCES ${PROG}*.cc)
 	add_executable(unit_${PROG} ${${PROG}_SOURCES})
 	target_link_libraries(unit_${PROG} votca_xtp ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${MKL_LIBRARIES})
