Updated fixed some more errors

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -3,6 +3,7 @@ if(ENABLE_TESTING)
     list(APPEND test_cases test_aobasis)
     list(APPEND test_cases test_apolarsite)
     list(APPEND test_cases test_atom)
+    list(APPEND test_cases test_dmaspace)
     list(APPEND test_cases test_fragment)
     list(APPEND test_cases test_glink)
     list(APPEND test_cases test_molecule)
