--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -35,10 +35,12 @@ WORKDIR build
 RUN ccache -z
 RUN cmake -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} \
   -DBUILD_CSGAPPS=ON -DBUILD_XTP=ON -DBUILD_CTP=ON -DCMAKE_INSTALL_PREFIX=/usr -DLIB=lib64 \
-  -DENABLE_TESTING=${TESTING} -DBUILD_CSG_MANUAL=ON -DBUILD_XTP_MANUAL=ON  ${COVERAGE:+-DENABLE_COVERAGE_BUILD=ON} \
+  -DENABLE_TESTING=${TESTING} -DBUILD_CSG_MANUAL=ON -DBUILD_CTP_MANUAL=ON -DBUILD_XTP_MANUAL=ON \
+  ${COVERAGE:+-DENABLE_COVERAGE_BUILD=ON} \
   ${MINIMAL:+-DCMAKE_DISABLE_FIND_PACKAGE_HDF5=ON -DWITH_FFTW=OFF -DWITH_GSL=OFF -DCMAKE_DISABLE_FIND_PACKAGE_GSL=ON \
     -DWITH_MKL=OFF -DCMAKE_DISABLE_FIND_PACKAGE_MKL=ON -DBUILD_MANPAGES=OFF -DWITH_GMX=OFF -DWITH_SQLITE3=OFF \
-    -DCMAKE_DISABLE_FIND_PACKAGE_SQLITE3=OFF -DBUILD_XTP=OFF -DBUILD_CTP=OFF -DBUILD_XTP_MANUAL=OFF} \
+    -DCMAKE_DISABLE_FIND_PACKAGE_SQLITE3=OFF -DBUILD_XTP=OFF -DBUILD_CTP=OFF -DBUILD_XTP_MANUAL=OFF \
+    -DBUILD_CTP_MANUAL=OFF} \
   ..
 RUN make VERBOSE=1 -j2
 RUN ccache -s
