--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,6 +9,7 @@ ARG CMAKE_BUILD_TYPE
 ARG TESTING
 ARG DOXYGEN
 ARG MINIMAL
+ARG MODULE_BUILD
 
 #for coverage
 ARG CI
@@ -36,7 +37,7 @@ RUN ccache -z
 RUN cmake -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} \
   -DBUILD_CSGAPPS=ON -DBUILD_XTP=ON -DBUILD_CTP=ON -DCMAKE_INSTALL_PREFIX=/usr -DLIB=lib64 \
   -DENABLE_TESTING=${TESTING} -DBUILD_CSG_MANUAL=ON -DBUILD_CTP_MANUAL=ON -DBUILD_XTP_MANUAL=ON \
-  ${COVERAGE:+-DENABLE_COVERAGE_BUILD=ON} \
+  ${COVERAGE:+-DENABLE_COVERAGE_BUILD=ON} -DMODULE_BUILD=${MODULE_BUILD} \
   ${MINIMAL:+-DCMAKE_DISABLE_FIND_PACKAGE_HDF5=ON -DWITH_FFTW=OFF -DWITH_GSL=OFF -DCMAKE_DISABLE_FIND_PACKAGE_GSL=ON \
     -DWITH_MKL=OFF -DCMAKE_DISABLE_FIND_PACKAGE_MKL=ON -DBUILD_MANPAGES=OFF -DWITH_GMX=OFF -DWITH_SQLITE3=OFF \
     -DCMAKE_DISABLE_FIND_PACKAGE_SQLITE3=OFF -DBUILD_XTP=OFF -DBUILD_CTP=OFF -DBUILD_XTP_MANUAL=OFF \
