Dockerfile: fix module build install

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -43,7 +43,7 @@ RUN cmake -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} \
     -DCMAKE_DISABLE_FIND_PACKAGE_SQLITE3=OFF -DBUILD_XTP=OFF -DBUILD_CTP=OFF -DBUILD_XTP_MANUAL=OFF \
     -DBUILD_CTP_MANUAL=OFF} \
   ..
-RUN make VERBOSE=1 -j2
+RUN make VERBOSE=1 -j2 ${MODULE_BUILD:+DESTDIR=/tmp}
 RUN ccache -s
 RUN if [ ${DOXYGEN} ]; then \
       make doxygen; \
