--- a/.travis.yml
+++ b/.travis.yml
@@ -11,24 +11,24 @@ services:
 
 env:
   matrix:
-    - ENV=1
-    - ENV=2
-    - ENV=3
-    - ENV=4
-    - ENV=5
-    - ENV=6
-    - ENV=7
-    - ENV=8
-    - ENV=9
-    - ENV=10
-    - ENV=11
-    - ENV=12
-    - ENV=13
-    - ENV=14
-    - ENV=15
-    - ENV=16
+#    - ENV=1
+#    - ENV=2
+#    - ENV=3
+#    - ENV=4
+#    - ENV=5
+#    - ENV=6
+#    - ENV=7
+#    - ENV=8
+#    - ENV=9
+#    - ENV=10
+#    - ENV=11
+#    - ENV=12
+#    - ENV=13
+#    - ENV=14
+#    - ENV=15
+#    - ENV=16
     - ENV=17
-    - ENV=18
+#    - ENV=18
 
 before_script:
  - git checkout -b current_commit
