Dockerfile: no DESTDIR install for module build

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -53,7 +53,9 @@ RUN if [ ${DOXYGEN} ]; then \
       rm -f doxygen.coverage.info; \
     fi
 RUN if [ ${TESTING} = ON ]; then make test CTEST_OUTPUT_ON_FAILURE=1 ARGS="${TESTOPTS}"; fi
-RUN make install DESTDIR=${PWD}/install && rm -rf ${PWD}/install/usr && rmdir ${PWD}/install
+RUN if [ ! ${MODULE_BUILD} ]; then 
+      make install DESTDIR=${PWD}/install && rm -rf ${PWD}/install/usr && rmdir ${PWD}/install;
+    fi
 RUN if [ ${COVERAGE} ]; then \
   if [ ${CC} = clang ]; then \
     codecov -R ${PWD}/../${TRAVIS_REPO_SLUG#*/} -F "${CC}" -x "llvm-cov gcov"; \
