--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -53,8 +53,8 @@ RUN if [ ${DOXYGEN} ]; then \
       rm -f doxygen.coverage.info; \
     fi
 RUN if [ ${TESTING} = ON ]; then make test CTEST_OUTPUT_ON_FAILURE=1 ARGS="${TESTOPTS}"; fi
-RUN if [ ! ${MODULE_BUILD} ]; then 
-      make install DESTDIR=${PWD}/install && rm -rf ${PWD}/install/usr && rmdir ${PWD}/install;
+RUN if [ ! ${MODULE_BUILD} ]; then \
+      make install DESTDIR=${PWD}/install && rm -rf ${PWD}/install/usr && rmdir ${PWD}/install; \
     fi
 RUN if [ ${COVERAGE} ]; then \
   if [ ${CC} = clang ]; then \
