added unit test for espfit

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -23,6 +23,7 @@ find_package(Boost 1.39.0 REQUIRED COMPONENTS unit_test_framework)
   list(APPEND test_cases test_hdf5)
   list(APPEND test_cases test_linalg)
   list(APPEND test_cases test_eris)
+  list(APPEND test_cases test_espfit)
   foreach(PROG ${test_cases} )
     add_executable(unit_${PROG} ${PROG}.cc)
     target_link_libraries(unit_${PROG} votca_xtp ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
