--- a/.travis.yml
+++ b/.travis.yml
@@ -67,7 +67,7 @@ script:
                  --build-arg TRAVIS_BRANCH=${TRAVIS_BRANCH} --build-arg TRAVIS_JOB_NUMBER=${TRAVIS_JOB_NUMBER}
                  --build-arg TRAVIS_PULL_REQUEST=${TRAVIS_PULL_REQUEST} --build-arg TRAVIS_JOB_ID=${TRAVIS_JOB_ID}
                  --build-arg TRAVIS_TAG=${TRAVIS_TAG} --build-arg TRAVIS_REPO_SLUG=${TRAVIS_REPO_SLUG}
-                 --build-arg TRAVIS_COMMIT=${TRAVIS_COMMIT}
+                 --build-arg TRAVIS_COMMIT=${TRAVIS_COMMIT} --build-arg BUILD_GROMACS=${BUILD_GROMACS}
                  ${TRAVIS_TAG:+-t votca/votca:${TRAVIS_TAG}}
                  -t votca/votca:latest -t votca/votca:${TRAVIS_BRANCH} ${HOME}/docker/ &&
      rm -rf $HOME/.ccache &&
