--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -10,6 +10,7 @@ ARG TESTING
 ARG DOXYGEN
 ARG MINIMAL
 ARG MODULE_BUILD
+ARG BUILD_GROMACS
 
 #for coverage
 ARG CI
@@ -37,7 +38,7 @@ RUN ccache -z
 RUN cmake -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} \
   -DBUILD_CSGAPPS=ON -DBUILD_XTP=ON -DBUILD_CTP=ON -DCMAKE_INSTALL_PREFIX=/usr -DLIB=lib64 \
   -DENABLE_TESTING=${TESTING} -DBUILD_CSG_MANUAL=ON -DBUILD_CTP_MANUAL=ON -DBUILD_XTP_MANUAL=ON \
-  ${COVERAGE:+-DENABLE_COVERAGE_BUILD=ON} \
+  ${COVERAGE:+-DENABLE_COVERAGE_BUILD=ON} -DBUILD_OWN_GROMACS=${BUILD_GROMACS} \
   -DMODULE_BUILD=${MODULE_BUILD} ${MODULE_BUILD:+-DCMAKE_INSTALL_PREFIX=/home/votca/votca -DVOTCA_TEST_OPTS="${TESTOPTS}"} \
   ${MINIMAL:+-DCMAKE_DISABLE_FIND_PACKAGE_HDF5=ON -DWITH_FFTW=OFF -DWITH_GSL=OFF -DCMAKE_DISABLE_FIND_PACKAGE_GSL=ON \
     -DWITH_MKL=OFF -DCMAKE_DISABLE_FIND_PACKAGE_MKL=ON -DBUILD_MANPAGES=OFF -DWITH_GMX=OFF -DWITH_SQLITE3=OFF \
