--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,8 @@ env:
     - ENV=16
     - ENV=17
     - ENV=18
+    - ENV=19
+    - ENV=20
 
 before_script:
  - git checkout -b current_commit
@@ -59,10 +61,8 @@ before_script:
 
 script:
  - if [[ ! ${SKIP} ]]; then
-     travis_retry docker build  --build-arg TESTOPTS="${TESTOPTS}" --build-arg COVERAGE=${COVERAGE}
-                 --build-arg CC=${CC} --build-arg CXX=${CXX} --build-arg CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
-                 --build-arg CXXFLAGS="-Wall ${WERROR:+-Werror}" --build-arg MODULE_BUILD=${MODULE_BUILD}
-                 --build-arg TESTING=${TESTING} --build-arg DOXYGEN=${DOXYGEN} --build-arg MINIMAL=${MINIMAL}
+     travis_retry docker build "${docker_opts[@]}"
+                 --build-arg CC=${CC} --build-arg CXX=${CXX} --build-arg CXXFLAGS="-Wall ${WERROR:+-Werror}"
                  --build-arg CI=${CI} --build-arg TRAVIS=${TRAVIS} --build-arg TRAVIS_OS_NAME=${DISTRO:-fedora}
                  --build-arg TRAVIS_BRANCH=${TRAVIS_BRANCH} --build-arg TRAVIS_JOB_NUMBER=${TRAVIS_JOB_NUMBER}
                  --build-arg TRAVIS_PULL_REQUEST=${TRAVIS_PULL_REQUEST} --build-arg TRAVIS_JOB_ID=${TRAVIS_JOB_ID}
