--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -1,6 +1,6 @@
 if(ENABLE_TESTING)  
 find_package(Boost 1.39.0 REQUIRED COMPONENTS unit_test_framework)
-  list(APPEND test_cases test_apolarsite)
+  list(APPEND test_cases test_polarsite)
   list(APPEND test_cases test_atom)
   list(APPEND test_cases test_fragment)
   list(APPEND test_cases test_glink)
