--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,19 @@ else (BUILD_MANPAGES)
   set(TXT2TAGS_FOUND)
 endif (BUILD_MANPAGES)
 
+find_package(EIGEN3 3.3.0 REQUIRED)
+message(STATUS "${EIGEN3_VERSION}")
+include_directories(${EIGEN3_INCLUDE_DIRS})
+
+find_package(MKL)
+if (MKL_FOUND)
+    message("-- MKL found")
+	include_directories(${MKL_INCLUDE_DIRS})
+	set (MKL TRUE )
+else()
+	set(MKL_LIBRARIES)
+endif()
+
 find_package(Boost 1.39.0 REQUIRED COMPONENTS program_options filesystem system )
 include_directories(${Boost_INCLUDE_DIRS})
 set (BOOST_CFLAGS_PKG "-I${Boost_INCLUDE_DIRS}")
