--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -11,6 +11,7 @@ list(APPEND test_cases test_name)
 list(APPEND test_cases test_table)
 list(APPEND test_cases test_typeconverter)
 list(APPEND test_cases test_vec)
+list(APPEND test_cases test_linalg)
 foreach(PROG ${test_cases})
   file(GLOB ${PROG}_SOURCES ${PROG}*.cc)
   add_executable(unit_${PROG} ${${PROG}_SOURCES})
