added Eigen conversion

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,19 @@ include_directories(${VOTCA_TOOLS_INCLUDE_DIRS})
 find_package(VOTCA_CSG REQUIRED)
 include_directories(${VOTCA_CSG_INCLUDE_DIRS})
 
+find_package(EIGEN3 3.3.0 REQUIRED)
+message(STATUS "${EIGEN3_VERSION}")
+include_directories(${EIGEN3_INCLUDE_DIRS})
+
+find_package(MKL)
+if (MKL_FOUND)
+    message("-- MKL found")
+	include_directories(${MKL_INCLUDE_DIRS})
+	set (MKL TRUE )
+else()
+	set(MKL_LIBRARIES)
+endif()
+
 file(GLOB_RECURSE FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} */*.cc)
 foreach(DIR ${FILES})
   string(REGEX MATCH ^[^/]* DIR ${DIR})
