--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -22,3 +22,18 @@ if (WITH_RC_FILES)
   install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/VOTCARC.csh
     ${CMAKE_CURRENT_BINARY_DIR}/VOTCARC.bash DESTINATION ${CMAKE_INSTALL_BINDIR})
 endif (WITH_RC_FILES)
+
+set(TOOLS_SCRIPTS) 
+
+foreach(SCRIPT tools_compare)
+  configure_file(${SCRIPT}.in ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT}.out @ONLY)
+  add_custom_target(${SCRIPT}_build ALL DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT})
+  add_custom_command(OUTPUT ${SCRIPT} COMMAND ${CMAKE_COMMAND}
+    -DINPUT="${SCRIPT}.out" -DOUTPUT="${SCRIPT}"
+    -DGIT_EXECUTABLE="${GIT_EXECUTABLE}"
+    -DTOP_SOURCE_DIR="${CMAKE_SOURCE_DIR}" -P ${CMAKE_MODULE_PATH}/gitscript.cmake)
+  set_property(DIRECTORY APPEND PROPERTY ADDITIONAL_MAKE_CLEAN_FILES ${SCRIPT})
+  install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT} DESTINATION ${CMAKE_INSTALL_BINDIR})
+  list(APPEND TOOLS_SCRIPTS "${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT}")
+endforeach(SCRIPT)
+set(TOOLS_SCRIPTS "${TOOLS_SCRIPTS}" PARENT_SCOPE)
