--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -23,8 +23,6 @@ if (WITH_RC_FILES)
     ${CMAKE_CURRENT_BINARY_DIR}/VOTCARC.bash DESTINATION ${CMAKE_INSTALL_BINDIR})
 endif (WITH_RC_FILES)
 
-set(TOOLS_SCRIPTS) 
-
 foreach(SCRIPT votca_compare)
   configure_file(${SCRIPT}.in ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT}.out @ONLY)
   add_custom_target(${SCRIPT}_build ALL DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT})
@@ -32,8 +30,9 @@ foreach(SCRIPT votca_compare)
     -DINPUT="${SCRIPT}.out" -DOUTPUT="${SCRIPT}"
     -DGIT_EXECUTABLE="${GIT_EXECUTABLE}"
     -DTOP_SOURCE_DIR="${CMAKE_SOURCE_DIR}" -P ${CMAKE_MODULE_PATH}/gitscript.cmake)
+  if(ENABLE_TESTING OR BUILD_CSG_MANUAL)
+    add_custom_command(TARGET ${SCRIPT}_build POST_BUILD COMMAND chmod +x ${SCRIPT})
+  endif(ENABLE_TESTING OR BUILD_CSG_MANUAL)
   set_property(DIRECTORY APPEND PROPERTY ADDITIONAL_MAKE_CLEAN_FILES ${SCRIPT})
   install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT} DESTINATION ${CMAKE_INSTALL_BINDIR})
-  list(APPEND TOOLS_SCRIPTS "${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT}")
 endforeach(SCRIPT)
-set(TOOLS_SCRIPTS "${TOOLS_SCRIPTS}" PARENT_SCOPE)
