--- a/src/tools/CMakeLists.txt
+++ b/src/tools/CMakeLists.txt
@@ -21,3 +21,15 @@ foreach(PROG csg_reupdate csg_map csg_dump csg_property csg_resample csg_stat cs
     set_tests_properties(${PROG}Help PROPERTIES LABELS "csg;tools;votca")
   endif(ENABLE_TESTING)
 endforeach(PROG)
+
+if(ENABLE_TESTING)
+  set(RUNPATH ${CMAKE_CURRENT_BINARY_DIR}/Run_csg_reupdate)
+  set(REFPATH ${CMAKE_CURRENT_SOURCE_DIR}/references/spce)
+  file(MAKE_DIRECTORY ${RUNPATH})
+  execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink ${REFPATH}/CG-CG.param.in_re ${RUNPATH}/CG-CG.param.cur)
+  add_test(NAME Run_csg_reupdate COMMAND csg_reupdate --gentable true --options ${REFPATH}/settings_re.xml WORKING_DIRECTORY ${RUNPATH})
+  set_tests_properties(Run_csg_reupdate PROPERTIES LABELS "csg;tools;votca")
+  add_test(NAME Compare_csg_reupdate_results COMMAND ${VOTCA_COMPARE} -f1 CG-CG.pot.new -f2 ${REFPATH}/CG-CG.pot.re WORKING_DIRECTORY ${RUNPATH})
+  set_tests_properties(Compare_csg_reupdate_results PROPERTIES DEPENDS Run_csg_reupdate)
+  set_tests_properties(Compare_csg_reupdate_results PROPERTIES LABELS "csg;tools;votca")
+endif()
