--- a/scripts/votca_compare.in
+++ b/scripts/votca_compare.in
@@ -36,19 +36,10 @@ votca_compare, version {version}
 
 '''.format(version=VERSION, progtitle=PROGTITLE)
 
-def okquit(what=''):
-  if what != '': print what
-  sys.exit(0)
 def xxquit(what=''):
   if what != '':
     cprint.Error("ERROR: {what}".format(what=what))
   sys.exit(1)
-def sysexe(cmd, silent=False, devfile='/dev/null'):
-  if VERBOSE: print "{0}@{1}$ {2}".format(USER, HOST, cmd)
-  if silent: cmd += ' >> {0} 2>> {0}'.format(devfile)
-  cdx = os.system(cmd)
-  #SYSCMDS.write('{cmd} = {cdx}\n'.format(cmd=cmd, cdx=cdx))
-  return cdx
 
 def RepresentsFloat(s):
     try: 
@@ -99,10 +90,10 @@ OPTIONS = progargs.parse_args()
 
 if not os.path.isfile(os.path.join(os.getcwd(),OPTIONS.file1)):
   progargs.print_help()
-  okquit("\nQuit here, because:{} is not a file(option -f1)".format(OPTIONS.file1))
+  xxquit("\nQuit here, because:{} is not a file(option -f1)".format(OPTIONS.file1))
 if not os.path.isfile(os.path.join(os.getcwd(),OPTIONS.file2)):
   progargs.print_help()
-  okquit("\nQuit here, because:{} is not a file(option -f2)".format(OPTIONS.file2))
+  xxquit("\nQuit here, because:{} is not a file(option -f2)".format(OPTIONS.file2))
 
 print "Comparing {} and {} to a tolerance of {}".format(OPTIONS.file1,OPTIONS.file2,OPTIONS.etol)
 
