--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -3,7 +3,7 @@ list(APPEND test_cases test_edge_base)
 list(APPEND test_cases test_edgecontainer)
 list(APPEND test_cases test_elements)
 list(APPEND test_cases test_floatingpointcomparison)
-list(APPEND test_cases test_graph)
+list(APPEND test_cases test_graph_base)
 list(APPEND test_cases test_graph_bf_visitor)
 list(APPEND test_cases test_graphalgorithm)
 list(APPEND test_cases test_graphdistvisitor)
