--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -30,9 +30,9 @@ foreach(SCRIPT votca_compare)
     -DINPUT="${SCRIPT}.out" -DOUTPUT="${SCRIPT}"
     -DGIT_EXECUTABLE="${GIT_EXECUTABLE}"
     -DTOP_SOURCE_DIR="${CMAKE_SOURCE_DIR}" -P ${CMAKE_MODULE_PATH}/gitscript.cmake)
-  if(ENABLE_TESTING OR BUILD_CSG_MANUAL)
+  if(ENABLE_TESTING)
     add_custom_command(TARGET ${SCRIPT}_build POST_BUILD COMMAND chmod +x ${SCRIPT})
-  endif(ENABLE_TESTING OR BUILD_CSG_MANUAL)
+  endif(ENABLE_TESTING)
   set_property(DIRECTORY APPEND PROPERTY ADDITIONAL_MAKE_CLEAN_FILES ${SCRIPT})
   install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT} DESTINATION ${CMAKE_INSTALL_BINDIR})
 endforeach(SCRIPT)
