--- a/scripts/xtp_update.in
+++ b/scripts/xtp_update.in
@@ -1,4 +1,4 @@
-#! /usr/bin/env python2
+#! /usr/bin/env python3
 #
 # Copyright 2009-2017 The VOTCA Development Team (http://www.votca.org)
 #
@@ -92,7 +92,7 @@ port = conn.cursor()
 try:
 	port.execute('ALTER TABLE pairs ADD COLUMN type INT;')
 except:
-	print "'pair' table already up-to-date"
+	print ("'pair' table already up-to-date")
 	
 try:
 	port.execute('''CREATE TABLE superExchange 
@@ -101,7 +101,7 @@ try:
             top        INT NOT NULL,
             type      TEXT NOT NULL)''')
 except:
-	print "'superExchange' table already up-to-date"
+	print ("'superExchange' table already up-to-date")
 
 conn.commit()
 conn.close()
