--- a/scripts/xtp_update_exciton.in
+++ b/scripts/xtp_update_exciton.in
@@ -1,4 +1,4 @@
-#! /usr/bin/env python2
+#! /usr/bin/env python3
 #
 # Copyright 2009-2017 The VOTCA Development Team (http://www.votca.org)
 #
@@ -108,7 +108,7 @@ try:
 
 
 except:
-	print "'segments' table already up-to-date"
+	print ("'segments' table already up-to-date")
 	
 try:
 	port.execute('ALTER TABLE pairs ADD COLUMN lOs REAL;')
@@ -123,7 +123,7 @@ try:
 	port.execute('ALTER TABLE pairs ADD COLUMN Jeff2t REAL;')
 	port.execute('UPDATE pairs SET IOs=0,IOt=0,rate12s=0,rate12t=0,rate21s=0,rate21t=0,Jeff2s=0,Jeff2t=0,has_s=0,has_t=0;')
 except:
-	print "'pairs' table already up-to-date"
+	print ("'pairs' table already up-to-date")
 
 conn.commit()
 conn.close()
