--- a/scripts/votca_compare.in
+++ b/scripts/votca_compare.in
@@ -1,4 +1,4 @@
-#! /usr/bin/env python3
+#! /usr/bin/env python
 #
 # Copyright 2009-2018 The VOTCA Development Team (http://www.votca.org)
 #
@@ -14,15 +14,17 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
+
+from __future__ import print_function
+VERSION='@PROJECT_VERSION@ #TOOLS_GIT_ID#'
 import sys
 import os
+import getpass
 import argparse
-VERSION = '@PROJECT_VERSION@ #TOOLS_GIT_ID#'
-
 
 PROGTITLE = 'THE VOTCA::TOOLS FILE COMPARISON'
 PROGDESCR = 'COMPARES TWO FILES TO EACH OTHER'
-VOTCAHEADER = '''
+VOTCAHEADER = '''\
 ==================================================
 ========   VOTCA (http://www.votca.org)   ========
 ==================================================
@@ -35,52 +37,50 @@ votca_compare, version {version}
 '''.format(version=VERSION, progtitle=PROGTITLE)
 
 def xxquit(what=''):
-    if what != '':
-        print("ERROR: {what}".format(what=what))
-    sys.exit(1)
+  if what != '':
+    cprint.Error("ERROR: {what}".format(what=what))
+  sys.exit(1)
 
 def RepresentsFloat(s):
-    try:
+    try: 
         float(s)
         return True
     except ValueError:
-        return False
+        return False 
 
 # =============================================================================
 # PROGRAM OPTIONS
 # =============================================================================
 
 class ToolsHelpFormatter(argparse.HelpFormatter):
-    def _format_usage(self, usage, action, group, prefix):
-        return VOTCAHEADER
-
+  def _format_usage(self, usage, action, group, prefix):
+    return VOTCAHEADER
+    
 progargs = argparse.ArgumentParser(prog='votca_compare',
-                                   formatter_class=lambda prog:
-                                   ToolsHelpFormatter(prog,
-                                                      max_help_position=70),
-                                   description=PROGDESCR)
-
+    formatter_class=lambda prog: ToolsHelpFormatter(prog,max_help_position=70),
+  description=PROGDESCR)
+  
 progargs.add_argument('-f1', '--file1',
-                      dest='file1',
-                      action='store',
-                      required=True,
-                      type=argparse.FileType('r'),
-                      help='File1 to compare.')
+    dest='file1',   
+    action='store',
+    required=True,
+    type=str,
+    help='File1 to compare.')
 
 progargs.add_argument('-f2', '--file2',
-                      dest='file2',
-                      action='store',
-                      required=True,
-                      type=argparse.FileType('r'),
-                      help='File2 to compare')
+    dest='file2',   
+    action='store',
+    required=True,
+    type=str,
+    help='File2 to compare')
 
 progargs.add_argument('--etol',
-                      dest='etol',
-                      action='store',
-                      type=float,
-                      default=1e-5,
-                      help='Tolerance for floats to be regarded equal,default=1e-5')
-
+    dest='etol',   
+    action='store',
+    type=float,
+    default=1e-5,
+    help='Tolerance for floats to be regarded equal,default=1e-5')
+    
 OPTIONS = progargs.parse_args()
 
 # =============================================================================
@@ -88,35 +88,53 @@ OPTIONS = progargs.parse_args()
 # =============================================================================
 
 
-if not os.path.isfile(os.path.join(os.getcwd(), OPTIONS.file1)):
-    progargs.print_help()
-    xxquit("\nQuit here, because:{} is not a file(option -f1)".format(OPTIONS.file1))
-if not os.path.isfile(os.path.join(os.getcwd(), OPTIONS.file2)):
-    progargs.print_help()
-    xxquit("\nQuit here, because:{} is not a file(option -f2)".format(OPTIONS.file2))
+if not os.path.isfile(os.path.join(os.getcwd(),OPTIONS.file1)):
+  progargs.print_help()
+  xxquit("\nQuit here, because:{} is not a file(option -f1)".format(OPTIONS.file1))
+if not os.path.isfile(os.path.join(os.getcwd(),OPTIONS.file2)):
+  progargs.print_help()
+  xxquit("\nQuit here, because:{} is not a file(option -f2)".format(OPTIONS.file2))
 
-print("Comparing {} and {} to a tolerance of {}".format(OPTIONS.file1,
-                                                        OPTIONS.file2, OPTIONS.etol))
-logs = []
-with open(os.path.join(os.getcwd(), OPTIONS.file1), 'r') as f1:
-    with open(os.path.join(os.getcwd(), OPTIONS.file2), 'r') as f2:
-        for i, (line1, line2) in enumerate(zip(f1, f2)):
-            if line1.startswith('#') or line2.startswith('#'):
-                continue
-            for j, (entry1, entry2) in enumerate(zip(line1.split(), line2.split())):
-                if RepresentsFloat(entry1) and RepresentsFloat(entry2):
-                    if abs(float(entry1) - float(entry2)) > OPTIONS.etol:
-                        logs.append([i, j, entry1, entry2])
-                elif entry1 != entry2:
-                    logs.append([i, j, entry1, entry2])
+print ("Comparing {} and {} to a tolerance of {}".format(OPTIONS.file1,OPTIONS.file2,OPTIONS.etol))
 
-if not logs:
-    sys.exit(0)
+data1=[]
+with open(os.path.join(os.getcwd(),OPTIONS.file1),"r") as f1:
+  for line in f1:
+    if line[0]=="#":
+      continue;
+    else:
+      tok=line.split()
+      data1.append(tok)
+data2=[]
+
+with open(os.path.join(os.getcwd(),OPTIONS.file2),"r") as f2:
+  for line in f2:
+    if line[0]=="#":
+      continue;
+    else:
+      tok=line.split()
+      data2.append(tok)
+
+if(len(data2) != len(data1)):
+  print ("Files have different number of data points {} vs {}".format(len(data1),len(data2)))
+
+logs=[]
+
+for i,(d1,d2) in enumerate(zip(data1,data2)):
+  for j,(entry1,entry2) in enumerate(zip(d1,d2)):
+    if(RepresentsFloat(entry1) and RepresentsFloat(entry2)):
+      if abs(float(entry1)-float(entry2))>OPTIONS.etol:
+        logs.append([i,j,entry1,entry2])
+    elif entry1!=entry2:
+        logs.append([i,j,entry1,entry2])
+
+if len(logs)==0:
+  sys.exit(0)
 else:
-    print("Diff:")
-    for diff in logs:
-        print("row {} col {}:\t{} vs {}".format(diff[0], diff[1], diff[2], diff[3]))
-    sys.exit(1)
+  print ("Diff:")
+  for diff in logs:
+    print ("row {} col {}:\t{} vs {}".format(diff[0],diff[1],diff[2],diff[3]))
+  sys.exit(1)
 
 
 
