--- a/scripts/votca_compare.in
+++ b/scripts/votca_compare.in
@@ -87,20 +87,18 @@ OPTIONS = progargs.parse_args()
 # Compare Execution
 # =============================================================================
 
-print("Comparing {} and {} to a tolerance of {}".format(OPTIONS.file1,
-                                                        OPTIONS.file2, OPTIONS.etol))
+print("Comparing {} and {} to a tolerance of {}".format(OPTIONS.file1.name,
+                                                        OPTIONS.file2.name, OPTIONS.etol))
 logs = []
-with open(os.path.join(os.getcwd(), OPTIONS.file1), 'r') as f1:
-    with open(os.path.join(os.getcwd(), OPTIONS.file2), 'r') as f2:
-        for i, (line1, line2) in enumerate(zip(f1, f2)):
-            if line1.startswith('#') or line2.startswith('#'):
-                continue
-            for j, (entry1, entry2) in enumerate(zip(line1.split(), line2.split())):
-                if RepresentsFloat(entry1) and RepresentsFloat(entry2):
-                    if abs(float(entry1) - float(entry2)) > OPTIONS.etol:
-                        logs.append([i, j, entry1, entry2])
-                elif entry1 != entry2:
-                    logs.append([i, j, entry1, entry2])
+for i, (line1, line2) in enumerate(zip(OPTIONS.file1, OPTIONS.file2)):
+    if line1.startswith('#') or line2.startswith('#'):
+        continue
+    for j, (entry1, entry2) in enumerate(zip(line1.split(), line2.split())):
+        if RepresentsFloat(entry1) and RepresentsFloat(entry2):
+            if abs(float(entry1) - float(entry2)) > OPTIONS.etol:
+                logs.append([i, j, entry1, entry2])
+        elif entry1 != entry2:
+            logs.append([i, j, entry1, entry2])
 
 if not logs:
     sys.exit(0)
