Dockerfile: disable ctp and xtp for now

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -36,8 +36,8 @@ RUN mkdir build
 WORKDIR build
 RUN ccache -z
 RUN cmake -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} \
-  -DBUILD_CSGAPPS=ON -DBUILD_XTP=ON -DBUILD_CTP=ON -DCMAKE_INSTALL_PREFIX=/usr \
-  -DENABLE_TESTING=${TESTING} -DBUILD_CSG_MANUAL=ON -DBUILD_CTP_MANUAL=ON -DBUILD_XTP_MANUAL=ON \
+  -DBUILD_CSGAPPS=ON -DBUILD_XTP=OFF -DBUILD_CTP=OFF -DCMAKE_INSTALL_PREFIX=/usr \
+  -DENABLE_TESTING=${TESTING} -DBUILD_CSG_MANUAL=ON -DBUILD_CTP_MANUAL=OFF -DBUILD_XTP_MANUAL=OFF \
   ${COVERAGE:+-DENABLE_COVERAGE_BUILD=ON} -DBUILD_OWN_GROMACS=${BUILD_GROMACS} \
   -DMODULE_BUILD=${MODULE_BUILD} ${MODULE_BUILD:+-DCMAKE_INSTALL_PREFIX=/home/votca/votca -DVOTCA_TEST_OPTS="${TESTOPTS}"} \
   ${MINIMAL:+-DCMAKE_DISABLE_FIND_PACKAGE_HDF5=ON -DWITH_FFTW=OFF -DWITH_GSL=OFF -DCMAKE_DISABLE_FIND_PACKAGE_GSL=ON \
