cmake: added csg_stat rdf test

--- a/src/tools/CMakeLists.txt
+++ b/src/tools/CMakeLists.txt
@@ -54,6 +54,17 @@ if(ENABLE_TESTING)
   set_tests_properties(Compare_csg_map_output PROPERTIES DEPENDS Run_csg_map)
   set_tests_properties(Compare_csg_map_output PROPERTIES LABELS "csg;tools;votca")
 
+  set(RUNPATH ${CMAKE_CURRENT_BINARY_DIR}/Run_csg_stat)
+  file(MAKE_DIRECTORY ${RUNPATH})
+  add_test(NAME Run_csg_stat
+    COMMAND csg_stat --top ${REFPATH}/topol.xml --trj ${REFPATH}/frame.dump
+                     --options  ${REFPATH}/settings_rdf.xml --cg ${REFPATH}/mapping.xml
+    WORKING_DIRECTORY ${RUNPATH})
+  set_tests_properties(Run_csg_stat PROPERTIES LABELS "csg;tools;votca")
+  add_test(NAME Compare_csg_stat_output COMMAND ${VOTCA_COMPARE} -f1 CG-CG.dist.new -f2 ${REFPATH}/CG-CG.rdf WORKING_DIRECTORY ${RUNPATH})
+  set_tests_properties(Compare_csg_stat_output PROPERTIES DEPENDS Run_csg_stat)
+  set_tests_properties(Compare_csg_stat_output PROPERTIES LABELS "csg;tools;votca")
+  
   set(RUNPATH ${CMAKE_CURRENT_BINARY_DIR}/Run_csg_resample)
   set(REFPATH ${CMAKE_CURRENT_SOURCE_DIR}/references/csg_resample)
   file(MAKE_DIRECTORY ${RUNPATH})
