cmake: no recursive glob for testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,8 @@ if(ENABLE_TESTING)
   foreach(DIR ${DIRS})
     if (NOT CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_CURRENT_BINARY_DIR)
       file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${DIR})
-      file(GLOB_RECURSE FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${DIR}/*)
+      # not recursive to avoid copying in-place step_* dir
+      file(GLOB FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${DIR}/*)
       foreach(FILE ${FILES})
         execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink ${CMAKE_CURRENT_SOURCE_DIR}/${FILE} ${CMAKE_CURRENT_BINARY_DIR}/${FILE})
       endforeach(FILE ${FILES})
