Added GLOG library explicityly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,6 +76,8 @@ include_directories(${LIBXC_INCLUDE_DIRS})
 find_package(CERES REQUIRED)
 include_directories(${CERES_INCLUDE_DIRS})
 
+find_package(GLOG REQUIRED)
+include_directories(${GLOG_INCLUDE_DIRS})
 
 find_package(HDF5 1.8 REQUIRED COMPONENTS CXX)
 include_directories(${HDF5_INCLUDE_DIRS})
